stages/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: konfi
  name: router
  annotations:
    cert-manager.io/issuer: dev-letsencrypt-nginx
    cert-manager.io/certificate-name: dev-letsencrypt-nginx
    cert-manager.io/common-name: konfi-dev.denic0la.ch
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - konfi-dev.denic0la.ch
      secretName: dev-letsencrypt-nginx
  rules:
    - host: konfi-dev.denic0la.ch
      http:
        paths:
          - path: "/sockJs"
            pathType: Prefix
            backend:
              service:
                name: konfi-back
                port:
                  number: 80
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: konfi-ui
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - table-konfi-dev.denic0la.ch
      secretName: denic0la.ch
  rules:
    - host: table-konfi-dev.denic0la.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: konfi-back
                port:
                  number: 80
