stages/dev/test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test
spec:
  podSelector:
    matchLabels:
      app: konfi-ui
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: nginx
